<resources>
    <string name="app_name">Horas Trabalhadas</string>
    <string name="no_internet_connection">Você precisa estar conectado a internet.</string>
    <string name="unknown_error">Erro desconhecido.</string>
    <string name="unknown_sign_in_response">Erro desconhecido ao logar.</string>
    <string name="registrar">Registrar</string>
    <string name="no_log_found">Nenhum item logado =(</string>
    <string name="notification_time_leave">Ei!! Hora de ir embora, já fecharam suas 8 horas!</string>
    <string name="notification_title_leave_time">Ei!! Hoje você pode sair às %1$s!</string>
    <string name="notification_title_worked_time">Ei!! Hoje você trabalhou %1$s horas!</string>
    <string name="worked_on_day">Nesse dia você trabalhou:</string>
    <string name="must_leave_at">Você poderá sair às:</string>
    <string name="sample_hour">17:23:00</string>
    <string name="afternoon_leave">Saida tarde</string>
    <string name="moring_leave">Saida manhã</string>
    <string name="morning_arrival">Entrada manhã</string>
    <string name="logout">Sair</string>
    <string name="date">Data:</string>
    <string name="today">Hoje</string>
    <string name="all_logs">Todos os logs</string>
    <string name="info">Info</string>
    <string name="add_daylog">Registrar horário</string>
    <string name="widget_new_log_button">Widget de novo registro de hora</string>
    <string name="delete_log">Deletar log?</string>
    <string name="delete_log_content">Tem certeza que deseja deletar o log do dia %1$s?</string>
    <string name="confirm_delete">Sim, delete</string>
    <string name="cancel_delete">Não, cancele</string>
    <string name="delete_success">Log deletado com sucesso!</string>
    <string name="delete_error">Erro ao deletar o log!</string>
    <string name="log_sucess">Log registrado!</string>
    <string name="afternoon_arrival">Entrada tarde</string>
    <string name="save">Salvar</string>
    <string name="channel_name">Horas Trabalhadas</string>
</resources>
